--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "jest": "jest",
     "prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --list-different \"{src,test}/**/*.ts\"",
     "fix-prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --write \"{src,test}/**/*.ts\"",
-    "test": "npm run prettier && npm run jest",
+    "test": "npm run prettier && npm run jest && npm run docs",
     "clean": "rimraf rm -rf lib/*",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "docs": "docs-ts"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "@types/jest": "^22.2.2",
     "@types/node": "8.0.19",
     "cross-env": "^5.1.4",
+    "docs-ts": "0.0.1",
     "jest": "^22.4.3",
     "prettier": "^1.13.4",
     "rimraf": "^2.6.2",
