--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/gcanti/retry-ts/issues"
   },
   "homepage": "https://github.com/gcanti/retry-ts",
-  "dependencies": {
+  "peerDependencies": {
     "fp-ts": "^2.0.0"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "@types/node": "8.0.19",
     "cross-env": "^5.1.4",
     "docs-ts": "0.0.1",
+    "fp-ts": "^2.0.0",
     "jest": "^22.4.3",
     "prettier": "^1.13.4",
     "rimraf": "^2.6.2",
