--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retry-ts",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Retry combinators for monadic actions that may fail",
   "files": [
     "lib"
@@ -15,6 +15,7 @@
     "test": "npm run prettier && npm run jest && npm run docs",
     "clean": "rimraf rm -rf lib/*",
     "build": "npm run clean && tsc",
+    "prepublish": "npm run build",
     "docs": "docs-ts"
   },
   "repository": {
@@ -34,12 +35,12 @@
     "@types/jest": "^22.2.2",
     "@types/node": "8.0.19",
     "cross-env": "^5.1.4",
-    "docs-ts": "0.0.1",
+    "docs-ts": "^0.1.0",
     "fp-ts": "^2.0.0",
-    "jest": "^22.4.3",
-    "prettier": "^1.13.4",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "3.3.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
@@ -54,30 +55,5 @@
     "fp-ts",
     "functional-programming",
     "Retry combinators"
-  ],
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "skipBabel": true
-      }
-    },
-    "collectCoverage": true,
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "test",
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testPathIgnorePatterns": [],
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 0
-      }
-    }
-  }
+  ]
 }
