--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "retry-ts",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Retry combinators for monadic actions that may fail",
   "files": [
-    "lib"
+    "lib",
+    "es6"
   ],
   "main": "lib/index.js",
+  "module": "es6/index.js",
   "typings": "lib/index.d.ts",
+  "sideEffects": false,
   "scripts": {
-    "lint": "tslint -p tsconfig.json src/**/*.ts test/**/*.ts",
+    "lint": "tslint -p .",
     "jest": "jest",
     "prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --list-different \"{src,test}/**/*.ts\"",
     "fix-prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --write \"{src,test}/**/*.ts\"",
     "test": "npm run prettier && npm run jest && npm run docs",
-    "clean": "rimraf rm -rf lib/*",
-    "build": "npm run clean && tsc",
+    "clean": "rm -rf ./lib ./es6",
+    "prebuild": "npm run clean",
+    "build": "tsc -p ./tsconfig.build.json && tsc -p ./tsconfig.build-es6.json",
+    "postbuild": "import-path-rewrite && prettier --write \"./{lib,es6}/**/*.ts\"",
     "prepublish": "npm run build",
     "docs": "docs-ts"
   },
@@ -35,10 +40,11 @@
     "@types/jest": "^22.2.2",
     "@types/node": "8.0.19",
     "cross-env": "^5.1.4",
-    "docs-ts": "^0.1.0",
+    "docs-ts": "^0.3.0",
     "fp-ts": "^2.0.0",
+    "import-path-rewrite": "github:gcanti/import-path-rewrite",
     "jest": "^24.8.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "rimraf": "^2.6.2",
     "ts-jest": "^24.0.2",
     "ts-node": "3.3.0",
