--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "retry-ts",
   "version": "0.1.2",
   "description": "Retry combinators for monadic actions that may fail",
-  "files": [
-    "lib",
-    "es6"
-  ],
   "main": "lib/index.js",
   "module": "es6/index.js",
   "typings": "lib/index.d.ts",
@@ -14,14 +10,18 @@
     "lint": "tslint -p .",
     "jest": "jest",
     "prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --list-different \"{src,test}/**/*.ts\"",
-    "fix-prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --write \"{src,test}/**/*.ts\"",
-    "test": "npm run prettier && npm run jest && npm run docs",
-    "clean": "rm -rf ./lib ./es6",
+    "fix-prettier": "prettier --no-semi --single-quote --print-width 120 --parser typescript --write \"{src,test,examples,exercises}/**/*.ts\"",
+    "test": "npm run prettier && npm run lint && npm run jest && npm run docs",
+    "clean": "rm -rf ./dist",
     "prebuild": "npm run clean",
-    "build": "tsc -p ./tsconfig.build.json && tsc -p ./tsconfig.build-es6.json",
-    "postbuild": "import-path-rewrite && prettier --write \"./{lib,es6}/**/*.ts\"",
-    "prepublish": "npm run build",
-    "docs": "docs-ts"
+    "build": "tsc -p ./tsconfig.build.json && tsc -p ./tsconfig.build-es6.json && npm run import-path-rewrite && ts-node scripts/build",
+    "postbuild": "prettier --loglevel=silent --write \"./dist/**/*.ts\"",
+    "prepublishOnly": "ts-node scripts/pre-publish",
+    "mocha": "TS_NODE_CACHE=false mocha -r ts-node/register test/*.ts",
+    "docs": "docs-ts",
+    "prerelease": "npm run build",
+    "release": "ts-node scripts/release",
+    "import-path-rewrite": "import-path-rewrite"
   },
   "repository": {
     "type": "git",
@@ -37,20 +37,21 @@
     "fp-ts": "^2.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.2",
-    "@types/node": "8.0.19",
-    "cross-env": "^5.1.4",
-    "docs-ts": "^0.3.4",
-    "fp-ts": "^2.0.0",
+    "@types/glob": "^7.1.3",
+    "@types/jest": "25.2.1",
+    "@types/node": "13.11.0",
+    "docs-ts": "^0.6.2",
+    "fp-ts": "^2.5.0",
     "import-path-rewrite": "github:gcanti/import-path-rewrite",
-    "jest": "^24.8.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^24.0.2",
-    "ts-node": "3.3.0",
-    "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^3.5.2"
+    "jest": "25.2.7",
+    "mocha": "7.1.1",
+    "prettier": "2.0.2",
+    "rimraf": "3.0.2",
+    "ts-jest": "25.3.1",
+    "ts-node": "8.8.2",
+    "tslint": "6.1.1",
+    "tslint-config-standard": "9.0.0",
+    "typescript": "^4.1.3"
   },
   "tags": [
     "fp-ts",
