--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/lib",
     "noEmit": true,
-    "outDir": "./lib",
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "lib": ["es6"],
-    "sourceMap": false,
     "declaration": true,
-    "strict": true,
-    "noImplicitReturns": true,
+    "esModuleInterop": true,
+    "module": "commonjs",
+    "noImplicitReturns": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": true,
+    "target": "es5",
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "stripInternal": true,
+    "lib": ["es2015"]
   },
-  "include": ["./src", "./test"]
+  "include": ["./src", "./test", "./scripts"]
 }
